--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "restapi",
+  "name": "todo-api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "jade": "~1.11.0",
-    "mongoose": "^4.11.1",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "debug": "~2.2.0",
+    "ejs": "~2.4.1",
+    "express": "~4.13.4",
+    "mongoose": "4.5.8",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
