--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "express-session": "^1.15.3",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "4.5.8",
-    "morgan": "~1.7.0",
+    "morgan": "^1.7.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
